--- a/app/views/partials/_sidenav.html.erb
+++ b/app/views/partials/_sidenav.html.erb
@@ -1,4 +1,4 @@
-<div id="sidebar-container" class="sidebar-expanded d-none d-md-block">
+<div id="sidebar-container" class="sidebar-expanded d-md-block">
   <ul class="list-group">
     <li class="my-3 mx-3">
       <div class="d-flex w-100 justify-content-start align-items-center" id="sidebar-toggle">
