--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
-<%= image_tag "logo.png", class: "img-fluid my-4 mx-auto d-block" , style: "width: 600px;" %>
-<div class="mx-auto container card bg-white h-75" style="width: 35rem;margin-top: 4rem;">
+<%= image_tag "logo.png", class: "img-fluid my-4 mx-auto d-block" %>
+<div class="mx-auto container card bg-white h-75" style="max-width: 35rem;margin-top: 4rem;">
   <div class="card-body">
     <h2 class="text-center pt-4" style="font-weight: bold;">Sign Up</h2>
     <%= form_with model: @user, url: "/signup" do |form| %>
@@ -33,12 +33,12 @@
     <% end %>
   </div>
 </div>
-<div class="d-flex flex-row my-3 justify-content-center align-items-center text-muted mx-auto" style="width: 35rem;">
+<div class="d-flex flex-row my-3 justify-content-center align-items-center text-muted mx-auto" style="max-width: 35rem;">
   <hr class="w-100 mx-2" style="height: 2px; background-color: black"/>
   <span class="text-center text-sm mx-2">Or</span>
   <hr class="w-100 mx-2" style="height: 2px; background-color: black"/>
 </div>
-<div class=" justify-content-center align-items-center text-muted mx-auto" style="width: 35rem;">
+<div class=" justify-content-center align-items-center text-muted mx-auto" style="max-width: 35rem;">
   <%= form_tag "/auth/google_oauth2" , method: :post do %>
     <button class="btn btn-outline-dark d-flex flex-row justify-content-center align-items-center mx-auto shadow-sm border" style=" height: 50px; border:none; border-radius: 5px; background-color: #FFFFFF; color: #000000;">
       <%= image_tag "google.png", class: "img-fluid my-2 mx-auto d-block", style: "width: 30px; height: 30px;" %>
