--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   </head>
 </head>
-<body style="background-color: #F3F4F4;">
+<body class="main-container">
   <%= yield %>
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
