--- a/app/views/partials/_sidenav.html.erb
+++ b/app/views/partials/_sidenav.html.erb
@@ -5,22 +5,22 @@
         <svg style="fill: white; cursor: pointer;" width="30" height="30" focusable="false" viewBox="0 0 24 24" aria-hidden="true"><path d="M3 18h13v-2H3v2zm0-5h10v-2H3v2zm0-7v2h13V6H3zm18 9.59L17.42 12 21 8.41 19.59 7l-5 5 5 5L21 15.59z"></path></svg>
       </div>
     </li>
-    <hr style="background-color: white; margin: 0px">
+    <hr class="white-line">
     <% if flag %>
       <li class="menu-collapsed">
-        <div class="d-flex w-100 justify-content-start align-items-center active-navitem my-3 text-white" id="currentIteration-show">
+        <div class="d-flex w-100 justify-content-start align-items-center navitem active-navitem my-3" id="currentIteration-show">
           <i class="fa fa-solid fa-list mx-4 fa-lg"></i>
           <span >Iteration</span>
         </div>
       </li>
       <li class="menu-collapsed">
-        <div class="d-flex w-100 justify-content-start align-items-center active-navitem my-3 text-white" id="icebox-show">
+        <div class="d-flex w-100 justify-content-start align-items-center navitem active-navitem my-3" id="icebox-show">
           <i class="fa fa-duotone fa-snowflake mx-4 fa-lg"></i>
           <span>Icebox</span>
         </div>
       </li>
       <li class="menu-collapsed">
-        <div class="d-flex w-100 justify-content-start align-items-center active-navitem my-3 text-white" id="backlog-show">
+        <div class="d-flex w-100 justify-content-start align-items-center navitem active-navitem my-3" id="backlog-show">
           <i class="fa fa-solid fa-triangle-exclamation mx-4 fa-lg"></i>
           <span >Backlog</span>
         </div>
