--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_include_tag 'packs/project_form' %>
+<%= javascript_pack_tag 'project_form' %>
 
 <div class="container my-2">
   <div class="field form-group">
@@ -7,6 +7,6 @@
     <p  class="text-danger" id="projectForm"><%= error_messages(@project, :name) %></p>
   </div>
   <div class="actions d-flex justify-content-center my-3">
-    <button type="submit" class="btn btn-success" id="create-project-btn">Create Project</button>
+    <button type="submit" class="btn mybtn-success" id="create-project-btn">Create Project</button>
   </div>
 </div>
