--- a/app/views/details/feature_search.html.erb
+++ b/app/views/details/feature_search.html.erb
@@ -1,7 +1,7 @@
-<%= javascript_include_tag 'packs/detail_form' %>
-<%= javascript_include_tag 'packs/detail' %>
+<%= javascript_pack_tag 'detail_form' %>
+<%= javascript_pack_tag 'detail' %>
 <%= render "partials/topnav", project: @project, flag: false %>
-<div class="row" id="body-row" style="background-color: #212123;">
+<div class="row body-row" id="body-row">
   <%= render "partials/sidenav", project: @project, flag: false %>
   <div class="col">
     <% unless @details.nil? %>
@@ -9,7 +9,7 @@
         <h2 class="text-center text-white py-5">Couldn't Find Any Matching Feature</h2>
       <% elsif @details.present? %>
         <div class="mx-2 w-50" id="search">
-          <div class="card h-full" style="background-color: #f1f2f4;">
+          <div class="card h-full body-bg">
             <div  class="card-header d-flex flex-row justify-content-between align-items-center">
               <h2>Search Results</h2>
             </div>
