--- a/app/views/partials/_detail.html.erb
+++ b/app/views/partials/_detail.html.erb
@@ -1,114 +1,113 @@
 <div id="detailContainer" data-item-id="<%= item.id %>" class="detail-container">
-<div class="card card-body">
-  <div class="text-dark text-uppercase fw-bold my-3" style="font-size: 12px;">
-    Feature Id : <%= item.uuid %>
-  </div>
-  <div class="text-dark text-uppercase fw-bold my-3" style="font-size: 12px;">
-    Title : <%= item.title %> </div>
-  <div class="text-dark text-uppercase fw-bold my-3" style="font-size: 12px;">
-    Description : <%= item.description %> </div>
-  <%= form_tag "/change_status/#{item.id}", method: :post, remote: true, id: 'change-status-form' do |f| %>
-    <div class="flash-container<%= item.id %>"></div>
-    <div class="my-3">
-      <%= hidden_field_tag :project_id, item.project_id%>
-      <%= label_tag :status, "Status:", class: "text-dark text-uppercase fw-bold", style: "font-size: 12px;" %>
-      <%= select_tag :status, options_for_select(["Started", "Finished", "Delivered"], selected: item.status), class: "form-select" %>
+  <div class="card card-body text-sm">
+    <div class="text-dark text-upper my-3">
+      Feature Id : <%= item.uuid %>
     </div>
-    <%= submit_tag "Save", class: "message-btn" %>
-  <% end %>
-  <div class="text-dark text-uppercase fw-bold mt-5" style="font-size: 12px;" id="taskCount<%= item.id %>">
-    Tasks: (<%= item.tasks.Done.length %> / <%= item.tasks.length %>) </div>
-  <div id="taskContainer<%= item.id %>">
-    <% item.tasks.each do |task| %>
-      <div class="field form-group text-dark my-3">
-        <div class="form-check mx-4">
-          <%= check_box_tag "detail[task_ids][]", task.id, task.status != "Added", class: "form-check-input task-checkbox#{item.id}", data: { project_id: item.project_id, detail_id: item.id, task_id: task.id }, id: "detail_task_ids_#{task.id}" %>
-          <label class="form-check-label"><%= task.name %></label>
-        </div>
+    <div class="text-dark text-upper my-3">
+      Title : <%= item.title %> </div>
+    <div class="text-dark text-upper my-3">
+      Description : <%= item.description %> </div>
+    <%= form_tag "/change_status/#{item.id}", method: :post, remote: true, id: 'change-status-form' do |f| %>
+      <div class="flash-container<%= item.id %>"></div>
+      <div class="my-3">
+        <%= hidden_field_tag :project_id, item.project_id%>
+        <%= label_tag :status, "Status:", class: "text-dark text-upper", style: "font-size: 12px;" %>
+        <%= select_tag :status, options_for_select(["Started", "Finished", "Delivered"], selected: item.status), class: "form-select" %>
       </div>
+      <%= submit_tag "Save", class: "message-btn" %>
     <% end %>
-  </div>
-  <div class="field form-group d-flex justify-content-around text-dark my-3">
-    <div class="flash-task-container<%= item.id %>"></div>
-    <div>
-      <label for="task_name">Task Name</label>
-      <input type="text" name="task_name" class="form-control" id="task_name<%= item.id %>" style="cursor: pointer">
-    </div>
-    <button type="button" class="message-btn mx-0 task-button" id="addTaskButton<%= item.id %>">Add Task</button>
-  </div>
-  <div class="d-flex flex-column flex-wrap">
-    <div class="text-dark text-uppercase fw-bold mt-5 mb-3" style="font-size: 12px;">
-      Users Assigned to this:
-    </div>
-    <div class="d-flex flex-column  flex-wrap">
-      <div id="user-container<%= item.id %>">
-        <% item.users.each do |user| %>
-          <p><%= user.username %></p>
-        <% end %>
-      </div>
-      <%= form_tag(update_user_ids_project_detail_path(item.project_id, item.id ), method: :post, remote: true) do %>
-        <input type="text"  name="username[]" id="search-input<%= item.id %>" class="form-control" placeholder="Type username to search..." />
-        <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-        <div id="search-results<%= item.id %>"></div>
-        <%= submit_tag 'Add User', class: 'message-btn mt-3' %>
-      <% end %>
-    </div>
-  </div>
-  <div class="d-flex flex-column flex-wrap">
-    <div class="text-dark text-uppercase fw-bold my-3" style="font-size: 12px;">
-      Files :
-    </div>
-    <div class="d-flex flex-column flex-wrap">
-      <% if item.file %>
-        <% item.file.each do |item| %>
-          <% if item.image? %>
-            <%= image_tag item, class: 'img-thumbnail m-2', style: 'width: 100px; height: 100px;' %>
-          <% else %>
-            <%= link_to 'Download', rails_blob_path(item, disposition: 'attachment') %>
-          <% end %>
-        <% end %>
-      <% end %>
-    </div>
-  </div>
-  <div class="d-flex flex-column flex-wrap">
-    <div class="text-dark text-uppercase fw-bold my-3" style="font-size: 12px;">
-      Comment Box :
-    </div>
-    <div class="d-flex flex-column  flex-wrap">
-      <div id="chat-container<%= item.id %>">
-        <% @chats.each do |chat| %>
-          <% if chat.detail_id === item.id %>
-            <div class="d-flex justify-content-start">
-              <div class="icon-container mt-2 mx-2">
-                <%= User.find(chat.sender_id).username[0].upcase %>
-              </div>
-              <div class='message py-2'>
-                <%= chat.message.gsub(/@(\w+)/, '<span class="bold-username">@\1</span>').html_safe %>
-              </div>
-            </div>
-          <% end %>
-        <% end %>
-      </div>
-      <%= form_for @chat, id: "chat-form-#{item.id}", remote: true, html: { "data-backlog-id" => item.id }, class: "bootstrap-class" do |form| %>
-        <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-        <div class="form-group d-flex flex-row">
-          <%= form.label :message, class: "mt-3 mx-2" %>
-          <div class="position-relative">
-            <%= form.text_area :message, id: "chat_message_#{item.id}", class: "form-control", autocomplete: "off" %>
-            <div id="search-results-chat<%= item.id %>" class="search-results"
-            ></div>
+    <div class="text-dark text-upper mt-5" id="taskCount<%= item.id %>">
+      Tasks: (<%= item.tasks.Done.length %> / <%= item.tasks.length %>) </div>
+    <div id="taskContainer<%= item.id %>">
+      <% item.tasks.each do |task| %>
+        <div class="field form-group text-dark my-3">
+          <div class="form-check mx-4">
+            <%= check_box_tag "detail[task_ids][]", task.id, task.status != "Added", class: "form-check-input task-checkbox#{item.id}", data: { project_id: item.project_id, detail_id: item.id, task_id: task.id }, id: "detail_task_ids_#{task.id}" %>
+            <label class="form-check-label"><%= task.name %></label>
           </div>
         </div>
-        <%= form.hidden_field :sender_id, value: current_user.id, id: "chat_sender_#{item.id}" %>
-        <%= form.hidden_field :detail_id, value: item.id, id: "chat_details_#{item.id}" %>
-        <div class="text-center">
-          <%= form.submit "Post Comment", id: "chat_submit_#{item.id}", class: "message-btn my-3" %>
-        </div>
       <% end %>
     </div>
+    <div class="field form-group d-flex flex-column  flex-wrap text-dark my-3">
+      <div class="flash-task-container<%= item.id %>"></div>
+      <div>
+        <label for="task_name">Task Name</label>
+        <input type="text" name="task_name" class="form-control pointer" id="task_name<%= item.id %>">
+        <p  class="text-danger"><%= error_messages(@task, :name) %></p>
+        <button type="button" class="message-btn mx-0 my-3" id="addTaskButton<%= item.id %>">Add Task</button>
+      </div>
+    </div>
+    <div class="d-flex flex-column flex-wrap">
+      <div class="text-dark text-upper mt-5 mb-3">
+        Users Assigned to this:
+      </div>
+      <div class="d-flex flex-column  flex-wrap">
+        <div id="user-container<%= item.id %>">
+          <% item.users.each do |user| %>
+            <p><%= user.username %></p>
+          <% end %>
+        </div>
+        <%= form_tag(update_user_ids_project_detail_path(item.project_id, item.id ), method: :post, remote: true) do %>
+          <input type="text"  name="username[]" id="search-input<%= item.id %>" class="form-control" placeholder="Type username to search..." />
+          <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+          <div id="search-results<%= item.id %>"></div>
+          <%= submit_tag 'Add User', class: 'message-btn mt-3' %>
+        <% end %>
+      </div>
+    </div>
+    <div class="d-flex flex-column flex-wrap">
+      <div class="text-dark text-upper my-3">
+        Files :
+      </div>
+      <div class="d-flex flex-column flex-wrap">
+        <% if item.file %>
+          <% item.file.each do |item| %>
+            <% if item.image? %>
+              <%= image_tag item, class: 'img-thumbnail m-2', style: 'width: 100px; height: 100px;' %>
+            <% else %>
+              <%= link_to 'Download', rails_blob_path(item, disposition: 'attachment') %>
+            <% end %>
+          <% end %>
+        <% end %>
+      </div>
+    </div>
+    <div class="d-flex flex-column flex-wrap">
+      <div class="text-dark text-upper my-3">
+        Comment Box :
+      </div>
+      <div class="d-flex flex-column  flex-wrap">
+        <div id="chat-container<%= item.id %>">
+          <% @chats.each do |chat| %>
+            <% if chat.detail_id === item.id %>
+              <div class="d-flex justify-content-start" data-message-id="<%= chat.id %>">
+                <div class="icon-container mt-2 mx-2">
+                  <%= User.find(chat.sender_id).username[0].upcase %>
+                </div>
+                <div class='message py-2'>
+                  <%= chat.message.gsub(/@(\w+)/, '<span class="fw-bold">@\1</span>').html_safe %>
+                </div>
+              </div>
+            <% end %>
+          <% end %>
+        </div>
+        <%= form_for @chat, id: "chat-form-#{item.id}", remote: true, html: { "data-backlog-id" => item.id }, class: "bootstrap-class" do |form| %>
+          <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+          <div class="form-group d-flex flex-row">
+            <%= form.label :message, class: "mt-3 mx-2 d-none" %>
+            <div class="position-relative">
+              <%= form.text_area :message, id: "chat_message_#{item.id}", class: "form-control my-2", autocomplete: "off" %>
+              <div id="search-results-chat<%= item.id %>" class="search-results"
+            ></div>
+            </div>
+          </div>
+          <%= form.hidden_field :sender_id, value: current_user.id, id: "chat_sender_#{item.id}" %>
+          <%= form.hidden_field :detail_id, value: item.id, id: "chat_details_#{item.id}" %>
+          <%= form.submit "Post Comment", id: "chat_submit_#{item.id}", class: "message-btn my-3" %>
+        <% end %>
+      </div>
+    </div>
+    <div class="d-flex justify-content-center py-3">
+      <button class="btn btn-secondary mt-3 mx-3" id="detailCloseButton<%= item.id %>" type="button">Close</button>
+    </div>
   </div>
-  <div class="d-flex justify-content-center py-3">
-    <button class="btn btn-secondary mt-3 mx-3" id="detailCloseButton<%= item.id %>" type="button">Close</button>
-  </div>
-</div>
 </div>
