--- a/app/views/partials/_topnav.html.erb
+++ b/app/views/partials/_topnav.html.erb
@@ -1,11 +1,11 @@
-<nav class="navbar navbar-expand-lg text-white" style="background-color: #256188">
-  <a class="navbar-brand" href="/" style="text-decoration:none; color: white">
+<nav class="navbar navbar-expand-lg text-white projectNav">
+  <a class="navbar-brand text-white" href="/">
     <% if flag %>
-      <div class="text-center" style="font-weight:bold; font-size: 20px"><i class="fa fa-duotone fa-gear mx-2"></i><%= project.name %></div>
+      <div class="text-center heading"><i class="fa fa-duotone fa-gear mx-2"></i><%= project.name %></div>
     <% elsif %>
       <div>
         <%= link_to project_path(@project.id) do %>
-          <div class="btn btn-success">Go Back</div>
+          <div class="btn mybtn-success">Go Back</div>
         <% end %>
       </div>
     <% end %>
@@ -22,9 +22,9 @@
           <% end %>
         </li>
         <li class="nav-item py-1">
-          <button id="notificationButton" class="btn btn-blue mx-2">
-            <i class="fas fa-bell fa-xl mx-2 mt-3"></i>
-            <span class="badge bg-danger noti-icon displayNone" id="notificationCounter"><%= current_user.notifications.where(read: false).count%></span>
+          <button id="notificationButton" class="btn btn-blue mx-3">
+            <i class="fas fa-bell fa-xl mt-3"></i>
+            <span class="badge bg-danger displayNone" id="notificationCounter"><%= current_user.notifications.where(read: false).count%></span>
           </button>
         </li>
         <li class="nav-item py-1">
@@ -32,7 +32,7 @@
         </li>
         <li class="nav-item py-1">
           <%= link_to logout_path, method: :post do %>
-            <i class="fa fa-solid fa-right-from-bracket mt-3 mx-3 fa-xl" style="color:#fff"></i>
+            <i class="fa fa-solid fa-right-from-bracket mt-3 mx-3 fa-xl text-white"></i>
           <% end %>
         </li>
       </ul>
