--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <%= image_tag "logo.png", class: "img-fluid my-4 mx-auto d-block" %>
-<div class="mx-auto container card bg-white h-75" style="max-width: 35rem;margin-top: 4rem;">
+<div class="mx-auto container card bg-white h-75 mt-5 block">
   <div class="card-body">
-    <h2 class="text-center pt-4" style="font-weight: bold;">Sign Up</h2>
+    <h2 class="text-center pt-4 bold">Sign Up</h2>
     <%= form_with model: @user, url: "/signup" do |form| %>
       <div class="form-group my-3">
         <%= form.label :"UserName (Can be Of Only One Word)", class: "required" %>
@@ -33,17 +33,17 @@
     <% end %>
   </div>
 </div>
-<div class="d-flex flex-row my-3 justify-content-center align-items-center text-muted mx-auto" style="max-width: 35rem;">
-  <hr class="w-100 mx-2" style="height: 2px; background-color: black"/>
+<div class="d-flex flex-row my-3 justify-content-center align-items-center text-muted mx-auto block">
+  <hr class="w-100 mx-2 line"/>
   <span class="text-center text-sm mx-2">Or</span>
-  <hr class="w-100 mx-2" style="height: 2px; background-color: black"/>
+  <hr class="w-100 mx-2 line"/>
 </div>
-<div class=" justify-content-center align-items-center text-muted mx-auto" style="max-width: 35rem;">
+<div class=" justify-content-center align-items-center text-muted mx-auto block">
   <%= form_tag "/auth/google_oauth2" , method: :post do %>
-    <button class="btn btn-outline-dark d-flex flex-row justify-content-center align-items-center mx-auto shadow-sm border" style=" height: 50px; border:none; border-radius: 5px; background-color: #FFFFFF; color: #000000;">
+    <button class="btn d-flex flex-row justify-content-center align-items-center mx-auto shadow-sm border google-btn">
       <%= image_tag "google.png", class: "img-fluid my-2 mx-auto d-block", style: "width: 30px; height: 30px;" %>
       <span class="text-center text-sm px-5 text-muted">Sign up with Google</span>
     </button>
   <% end %>
-  <div class="text-center text-uppercase py-3" style="font-weight:semibold; font-size:13px" > Already have an account? <%= link_to "Sign In", "/",  class: "text-decoration-none" %> </div>
+  <div class="text-center text-uppercase py-3 bottom-text" > Already have an account? <%= link_to "Sign In", "/",  class: "text-decoration-none" %> </div>
 </div>
