--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,26 +5,26 @@
     <%= form_with model: @user, url: "/signup" do |form| %>
       <div class="form-group my-3">
         <%= form.label :"UserName (Can be Of Only One Word)", class: "required" %>
-        <%= form.text_field :username, class: "form-control", placeholder: "Enter Your UserName" %>
+        <%= form.text_field :username, class: "form-control", placeholder: "Enter Your UserName", required: true %>
         <p class="text-danger"><%= error_messages(@user, :username) %></p>
       </div>
       <div class="form-group my-3">
         <%= form.label :"Email", class: "required" %>
-        <%= form.text_field :email, class: "form-control", placeholder: "Enter Your Email" %>
+        <%= form.text_field :email, class: "form-control", placeholder: "Enter Your Email", required: true %>
         <p  class="text-danger"><%= error_messages(@user, :email) %></p>
       </div>
       <div class="form-group my-3">
         <%= form.label :"Password", class: "required" %>
         <%= form.password_field :password,
                               class: "form-control",
-                              placeholder: "Enter Your Password" %>
+                              placeholder: "Enter Your Password", required: true %>
         <p  class="text-danger"><%= error_messages(@user, :password) %></p>
       </div>
       <div class="form-group my-3">
         <%= form.label :"Confirm Password", class: "required" %>
         <%= form.password_field :password_confirmation,
                               class: "form-control",
-                              placeholder: "Confirm Your Password" %>
+                              placeholder: "Confirm Your Password", required: true %>
         <p  class="text-danger"><%= error_messages(@user, :password_confirmation) %></p>
       </div>
       <div class="d-flex justify-content-center my-5">
